--- a/README
+++ b/README
@@ -1,32 +1,12 @@
-BibTeX-Parser 0.2
-
-This module parses BibTeX files in pure perl. It provides a relatively high 
-level of abstraction, so you don't need to be concerned with the details of 
-the file format.
-
-This version is still alpha software. Error handling might not be as polished
-as it should be. Also, later versions will probably "de-TeXifify" the return 
-values, which is a good thing (convert characters to unicode etc).
-
-However, the api will probably remain stable.
 
 
-INSTALLATION
+This archive contains the distribution BibTeX-Parser, version
+0.3:
 
-To install this module, run the following commands:
+  A pure perl BibTeX parser
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+This software is copyright (c) 2009 by Gerhard Gossen.
 
-
-AUTHOR
-
-Gerhard Gossen < gerhard . gossen at googlemail . com >
-
-LICENCE
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
 
