--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 
-This archive contains the distribution BibTeX-Parser, version
-0.4:
+This archive contains the distribution BibTeX-Parser,
+version 0.5:
 
   A pure perl BibTeX parser
 
@@ -9,4 +9,5 @@ This software is copyright (c) 2010 by Gerhard Gossen.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
+
 
